# svo-to-mcap

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: Cache.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  Sanitizers.cmake  fmt.cmake  foxglove-proto.cmake  gsl.cmake  magic_enum.cmake  mcap.cmake  yaml-cpp.cmake
scripts/: generate_ros2_schemas.py
src/: camera_manager.cpp  camera_manager.hpp  config.cpp  config.hpp  converter.cpp  converter.hpp  main.cpp  utils.hpp
src/foxglove/: BuildFileDescriptorSet.cpp  BuildFileDescriptorSet.hpp
src/mcap/: mcap_impl.cpp  mcap_writer.cpp  mcap_writer.hpp  ros2_schemas.hpp
src/ros2/: Ros2ImageWriter.cpp  Ros2ImageWriter.hpp  schemas.hpp
src/utils/: counting_semaphore.hpp  status.hpp  thread_pool.cpp  thread_pool.hpp  zed_to_ros.cpp  zed_to_ros.hpp  zed_utils.cpp  zed_utils.hpp
src/zed/: zed_camera.cpp  zed_camera.hpp
